rtest/tests/jsr335/Semantics/InterfaceMethods/MethodDeclarations/ShouldCompile/syntax02/Test.java
// .result=COMPILE_PASS


public class Test {
	interface A {
		boolean equals(Object o);
	}
}