rtest/tests/jsr335/Semantics/InterfaceMethods/MethodDeclarations/ShouldFail/syntax08/Test.java
// .result=COMPILE_FAIL


public class Test {
	interface A {
		strictfp strictfp void m() { 
			
		} 
	}
}